[package]
name = "rust_os"
version = "0.1.0"
authors = ["srickard <sean.rickard26@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
     "-display", "none"
]
test-timeout = 300  
test-success-exit-code = 33         # (0x10 << 1) | 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
x86_64 = "0.8.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false